change command line runner